Move all page_title calls from controllers to the views

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -3,6 +3,7 @@
     $("#item_tabs").tabs();
   });
 
+- page_title @item
 - breadcrumb link_to('Items', items_path), link_to_wowhead(@item)
 - unless @loot_table.nil?
   %h3= "Dropped by #{@loot_table.parent.object.name} in #{@loot_table.parent.parent.object.name}"
