--- a/app/views/members/edit.html.haml
+++ b/app/views/members/edit.html.haml
@@ -1,3 +1,4 @@
+- page_title @member.name, 'Edit'
 - breadcrumb link_to('Members', members_path), link_to_member(@member), 'Edit'
 - semantic_form_for @member do |form|
   = render :partial => 'form', :object => form
