--- a/app/views/loots/new.html.haml
+++ b/app/views/loots/new.html.haml
@@ -3,6 +3,8 @@
     $('#loot_item_name').autocomplete_items();
     $('#loot_member_name').autocomplete_members();
   });
+
+- page_title 'New Loot'
 - breadcrumb link_to('Loot', loots_path), 'New'
 - semantic_form_for @loot do |form|
   = render :partial => 'form', :object => form
