--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -1,3 +1,4 @@
+- page_title 'New Member'
 - breadcrumb link_to('Members', members_path), 'New'
 - semantic_form_for @member do |form|
   = render :partial => 'form', :object => form
