--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -7,6 +7,7 @@
     });
   });
 
+- page_title @member.name
 - breadcrumb link_to('Members', members_path), link_to_armory(@member)
 %div.category_block.block_wrap
   #member_stats
