Fix default page titles; add some non-default ones

--- a/app/views/attendance/raids/new.html.haml
+++ b/app/views/attendance/raids/new.html.haml
@@ -1,3 +1,4 @@
+- page_title 'Attendance'
 - breadcrumb link_to('Attendance', live_raids_path), 'New'
 - semantic_form_for @live_raid do |form|
   - form.inputs do
