Add a link to 'Add Raid' on the attendance post template

--- a/app/views/attendance/raids/post.erb
+++ b/app/views/attendance/raids/post.erb
@@ -9,3 +9,5 @@
 <%- @live_raid.loots.each do |loot| -%>
 <%= (loot.member_id.present?) ? loot.member.name : 'DE' %><%= (loot.loot_type.present?) ? " (#{loot.loot_type})" : '' %> - [item]<%= loot.item.wow_id %>[/item]|<%= loot.item.wow_id %>
 <%- end -%>
+
+[url=<%= new_raid_url %>]Add Raid[/url]
