--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -30,3 +30,7 @@
             %td.lootfactor= loot_factor(member.lf)
             %td.lootfactor= loot_factor(member.bislf)
             %td.lootfactor= loot_factor(member.sitlf)
+- if admin?
+  %div.topic_controls
+    %ul.topic_buttons
+      %li= link_to(image_tag('user_add.png') + 'Add Member', new_member_path, :title => 'Add Member')
