Add 'shadowfrost_shard' named scope to Item; remove instances of hard-coded item IDs

--- a/app/views/index/_shadowmourne_progress.html.haml
+++ b/app/views/index/_shadowmourne_progress.html.haml
@@ -1,4 +1,4 @@
-%h4= link_to_item_with_stats(Item.find(50274)) + " Progress"
+%h4= link_to_item_with_stats(Item.shadowfrost_shard.first) + " Progress"
 %table.ipb_table
   %thead
     %tr
