Scope all of our Form CSS to Formtastic forms

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -264,7 +264,7 @@ body.wishlists_root
 // Forms ----------------------------------------------------------------------
 @import formtastic_base.sass
 @import skintastic.sass
-form
+form.formtastic
   +stack-form
   .wishlist_priority
     +float-inputs(20px, 1.4em)
