--- a/public/stylesheets/sass/_skintastic.sass
+++ b/public/stylesheets/sass/_skintastic.sass
@@ -1,4 +1,4 @@
-form
+form.formtastic
   // <li> Field wrappers
   li
     :padding 10px 0px
@@ -40,17 +40,18 @@ form
   //--------------------------------------------------------
   // Inputs
   //--------------------------------------------------------
-  select
-    :padding 3px
-  input, textarea, select
-    :font-family inherit
-    :font-size 14px
-  textarea, input
-    :border 1px solid #999
-    :padding 6px 8px
-    :line-height 100%
-  .boolean label input
-    :margin-right 5px
+  fieldset.inputs
+    select
+      :padding 3px
+    input, textarea, select
+      :font-family inherit
+      :font-size 14px
+    textarea, input
+      :border 1px solid #999
+      :padding 6px 8px
+      :line-height 100%
+    .boolean label input
+      :margin-right 5px
   //--------------------------------------------------------
   // Date Time Styling
   //--------------------------------------------------------
