Rails 3 progress - index#index
- Convert IndexStat to ARel
- Fix all occurrences of named_scope
- Temporarily working around Authlogic

--- a/app/views/index/_best_attendance.html.haml
+++ b/app/views/index/_best_attendance.html.haml
@@ -8,4 +8,6 @@
     - best_attendance.each do |member|
       %tr{ :class => cycle('row1', 'row2') }
         %td= link_to_member(member)
-        %td.number= "<span class='positive'>#{number_with_precision(member.attendance_lifetime * 100.0, :precision => 1)}%</span>"
+        %td.number
+          %span.positive== #{number_with_precision(member.attendance_lifetime * 100.0, :precision => 1)}%
+
