--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -113,9 +113,9 @@
               %li= link_to('Back to top', '#top', :title => 'Go to top')
               %li= link_to('Forum Home', 'http://www.juggernautguild.com/index', :title => 'Forum Home')
             %p#copyright.right
-              = "Powered by #{link_to('JuggLF', 'http://github.com/tsigo/jugglf')}"
+              = "Powered by #{link_to('JuggLF', 'http://github.com/tsigo/jugglf')}".html_safe
               %br
-              = "Hosted by #{link_to('Network Redux', 'http://www.networkredux.com/')}"
+              = "Hosted by #{link_to('Network Redux', 'http://www.networkredux.com/')}".html_safe
             %br.clear
 
           #stats_div
