--- a/app/views/shared/_contextual_search.html.haml
+++ b/app/views/shared/_contextual_search.html.haml
@@ -1,4 +1,4 @@
-- form_tag(search_path, :method => 'get') do
+= form_tag(search_path, :method => 'get') do
   %fieldset
     %label.hide{:for => 'main_search'}Search
     %span#search_wrap
