--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -34,9 +34,9 @@ span.smaller
 
 // Success/Failure flash notice divs ------------------------------------------
 .positive
-  color = !positive_color
+  color: $positive_color
 .negative
-  color = !negative_color
+  color: $negative_color
 
 div.message
   a
@@ -74,8 +74,8 @@ noscript
   position: absolute
   z-index: 3000
   border: 1px solid
-    color = !notice_border_color
-  background-color = !notice_background
+    color: $notice_border_color
+  background-color: $notice_background
   padding: 5px
   -moz-border-radius: 5px
   -webkit-border-radius: 5px
@@ -215,9 +215,9 @@ body.wishlists_root
       padding: 10px
       -moz-border-radius: 2px
       -webkit-border-radius: 2px
-      background-color = !notice_background
+      background-color: $notice_background
       border: 1px solid
-        color = !notice_border_color
+        color: $notice_border_color
       color: #000000
       a
         color: #000000
