--- a/public/stylesheets/sass/_skintastic.sass
+++ b/public/stylesheets/sass/_skintastic.sass
@@ -1,10 +1,10 @@
 form.formtastic
   // <li> Field wrappers
   li
-    :padding 10px 0px
+    padding: 10px 0px
     // <li> Check/Radio wrappers
     li
-      :padding 0
+      padding: 0
   //--------------------------------------------------------
   // Fieldsets
   //--------------------------------------------------------
@@ -14,50 +14,50 @@ form.formtastic
   // Be sure to override styling for nested fieldsets
   li
     fieldset
-      :padding 0
+      padding: 0
   //--------------------------------------------------------
   // Legend & Labels
   //--------------------------------------------------------
   legend, label
     // Set color manually to override IE's stupid rules for legends
-    :color #333
-    :font-weight bold
+    color: #333333
+    font-weight: bold
   label, .label
-    :padding-bottom 5px
+    padding-bottom: 5px
     // required * <--styling
     abbr
-      :color #f00
+      color: red
   label
-    :line-height 1.4em
-    :font-size 13px
+    line-height: 1.4em
+    font-size: 13px
   legend
     span
-      :font-size 1.4em
+      font-size: 1.4em
       // Set lineheight for dumb IE
-      :line-height 1em
+      line-height: 1em
       &.label
-        :font-size 1em
+        font-size: 1em
   //--------------------------------------------------------
   // Inputs
   //--------------------------------------------------------
   fieldset.inputs
     select
-      :padding 3px
+      padding: 3px
     input, textarea, select
-      :font-family inherit
-      :font-size 14px
+      font-family: inherit
+      font-size: 14px
     textarea, input
-      :border 1px solid #999
-      :padding 6px 8px
-      :line-height 100%
+      border: 1px solid #999999
+      padding: 6px 8px
+      line-height: 100%
     .boolean label input
-      :margin-right 5px
+      margin-right: 5px
   //--------------------------------------------------------
   // Date Time Styling
   //--------------------------------------------------------
   .date, .time, .datetime
     li
-      :margin 0 0.3em 0 0
+      margin: 0 0.3em 0 0
   //--------------------------------------------------------
   // Feedback (Requirements, Errors and Hints)
   // Add horizontal margin/padding with care as it can
@@ -65,35 +65,35 @@ form.formtastic
   //--------------------------------------------------------
   #errorExplanation
     li
-      :margin-left 15px
+      margin-left: 15px
   form p, .errors
-    :padding 3px 0px
+    padding: 3px 0px
   .required
     input,textarea,select
-      :background-color #fff
+      background-color: white
   .error
     input,textarea,select
-      :background-color #fcc
-      :border 1px solid #f66
+      background-color: #ffcccc
+      border: 1px solid #ff6666
   .optional
     input,textarea,select
-      :background-color #fff
+      background-color: white
   .errors
-    :color #a00
+    color: #aa0000
     li
-      :margin-left 1.2em
+      margin-left: 1.2em
   p.inline-errors
-    :color #f00
+    color: red
   p.inline-hints
-    :color #777
+    color: #777777
   //--------------------------------------------------------
   // Submit Buttons
   //--------------------------------------------------------
   .buttons
-    :padding-top 8px
-    :padding-bottom 8px
-    :margin-top 8px
+    padding-top: 8px
+    padding-bottom: 8px
+    margin-top: 8px
     li
-      :padding-right 0.5em
+      padding-right: 0.5em
     input
-      :border 1px solid #999
+      border: 1px solid #999999
