Apparently WillPaginate uses <em> for the current page now. All right.

--- a/public/stylesheets/sass/lootfactor.sass
+++ b/public/stylesheets/sass/lootfactor.sass
@@ -382,7 +382,7 @@ div.pagination
   height: 30px
   padding: 0
   margin: 5px 0 0 0
-  a, span
+  a, span, em
     color: #838383
     display: block
     font-weight: bold
@@ -403,7 +403,8 @@ div.pagination
     &.current, &:hover
       background-color: #E9712D
       color: #FFFFFF
-  span.current
+  span.current, em
+    font-style: normal
     background-color: #E9712D
     color: #FFFFFF
   .gap
