--- a/app/views/attendance/loots/edit.html.haml
+++ b/app/views/attendance/loots/edit.html.haml
@@ -1,8 +1,8 @@
-- semantic_remote_form_for :live_loot, LiveLoot.new, :url => live_raid_live_loot_path(@parent), :html => {:method => :put} do |form|
+= semantic_remote_form_for :live_loot, LiveLoot.new, :url => live_raid_live_loot_path(@parent), :html => {:method => :put} do |form|
   %div#form_errors.message.error.hide
-  - form.inputs do
+  = form.inputs do
     = form.input :input_text, :as => :text, :label => 'Loots', :required => false, :input_html => {:size => '90x10'}
-  - form.buttons :class => 'submit' do
+  = form.buttons :class => 'submit' do
     = form.submit 'Parse', :class => 'input_submit'
 %div.category_block.block_wrap
   = render :partial => 'shared/maintitle', :object => 'Loots'
