--- a/app/views/attendance/raids/show.html.haml
+++ b/app/views/attendance/raids/show.html.haml
@@ -59,10 +59,10 @@
                   = link_to_toggle_attendee(att)
               %td.number= att.active_minutes
       %div#attendee_errors.message.error.hide
-      - semantic_form_for @live_raid do |form|
-        - form.inputs do
+      = semantic_form_for @live_raid do |form|
+        = form.inputs do
           = form.input :attendees_string, :label => 'Add or toggle an attendee', :required => false, :input_html => {:size => '50'}
-        - form.buttons :class => 'submit' do
+        = form.buttons :class => 'submit' do
           = form.submit 'Parse Attendees', :class => 'input_submit'
     #t-loots
       %table.ipb_table
@@ -75,8 +75,8 @@
         %tbody#live_loots
           = render :partial => 'attendance/loots/loot_row', :collection => @live_raid.loots
       %div#loot_errors.message.error.hide
-      - semantic_remote_form_for :live_loot, LiveLoot.new, :url => live_raid_live_loot_path(@live_raid), :html => {:method => :put} do |form|
-        - form.inputs do
+      = semantic_remote_form_for LiveLoot.new, :url => live_raid_live_loot_path(@live_raid), :html => {:method => :put} do |form|
+        = form.inputs do
           = form.input :input_text, :as => :text, :label => 'Add Loot', :required => false, :input_html => {:size => '90x10'}
-        - form.buttons :class => 'submit' do
+        = form.buttons :class => 'submit' do
           = form.submit 'Parse Loot', :class => 'input_submit'
