--- a/app/views/loots/edit.html.haml
+++ b/app/views/loots/edit.html.haml
@@ -6,5 +6,5 @@
 
 - page_title 'Edit Loot'
 - breadcrumb link_to('Loot', loots_path), 'Edit'
-- semantic_form_for @loot do |form|
+= semantic_form_for @loot do |form|
   = render :partial => 'form', :object => form
