--- a/app/views/members/punishments/new.html.haml
+++ b/app/views/members/punishments/new.html.haml
@@ -1,3 +1,3 @@
 - breadcrumb link_to('Members', members_path), link_to_member(@member), 'Punishments', 'New'
-- semantic_form_for [@member, @punishment] do |form|
+= semantic_form_for [@member, @punishment] do |form|
   = render :partial => 'form', :object => form
