--- a/app/views/raids/new.html.haml
+++ b/app/views/raids/new.html.haml
@@ -1,12 +1,12 @@
 - page_title 'New Raid'
 - breadcrumb link_to('Raids', raids_path), 'New'
-- semantic_form_for @raid do |form|
-  - form.inputs do
+= semantic_form_for @raid do |form|
+  = form.inputs do
     = form.input :date_string, :label => 'Date'
     = form.input :note, :required => false
     = form.input :attendance_output, :as => :text, :label => 'Attendance', :input_html => {:size => '60x15'}
     = form.input :loot_output, :as => :text, :label => 'Loot', :input_html => {:size => '60x15'}
-  - form.buttons :class => 'submit' do
+  = form.buttons :class => 'submit' do
     = form.submit 'Add Raid', :class => 'input_submit'
     or
     = link_to('Cancel', raids_path, :class => 'cancel')
