Raids new/edit form needs to use @raids and not Raid.latest

--- a/app/views/loots/_form.html.haml
+++ b/app/views/loots/_form.html.haml
@@ -2,7 +2,7 @@
   = form.input :item_id, :as => :hidden
   = form.input :item_name, :label => 'Item name or ID'
   = form.input :member_name, :label => 'Buyer', :required => false
-  = form.input :raid, :include_blank => true, :collection => Raid.latest
+  = form.input :raid, :include_blank => true, :collection => @raids
   = form.input :price, :required => false
   = form.input :best_in_slot, :required => false
   = form.input :situational, :required => false
