Improve link_to[_remote]_delete
- Remove link_to_remote_delete entirely
- link_to_delete will supply :remote => true by default
- Moved :success garbage into pure JavaScript events inside jugg.moderation

--- a/app/views/attendance/loots/_loot_row.html.haml
+++ b/app/views/attendance/loots/_loot_row.html.haml
@@ -4,4 +4,4 @@
   %td= loot_row.loot_type
   %td.image{ :width => "48px" }
     = link_to_function(image_tag('edit.png'), "attendanceEditLoot(#{loot_row.id})")
-    = link_to_remote_delete(loot_row, :text => '', :url => live_raid_live_loot_path(loot_row.live_raid, loot_row))
+    = link_to_delete(live_raid_live_loot_path(loot_row.live_raid, loot_row))
