--- a/app/views/attendance/raids/index.html.haml
+++ b/app/views/attendance/raids/index.html.haml
@@ -17,7 +17,7 @@
           %td.image{ :width => "48px" }
             = link_to(image_tag('edit.png'), live_raid_path(raid))
             - unless raid.active?
-              = link_to_delete(:text => '', :path => live_raid_path(raid))
+              = link_to_delete(live_raid_path(raid))
           %td.center= h(raid.status)
           %td.date= h(raid.started_at)
           %td.date= h(raid.stopped_at)
