Add page_title to index#index

--- a/app/views/index/index.html.haml
+++ b/app/views/index/index.html.haml
@@ -1,3 +1,4 @@
+- page_title
 - breadcrumb 'Index'
 %div.category_block.block_wrap
   = render :partial => 'shared/maintitle', :object => 'Overview'
