--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -59,7 +59,7 @@
                   %li#nav_discussion= link_to(content_tag(:span, 'Forums'), 'http://www.juggernautguild.com/index', :title => 'Go to Forums')
                   %li#nav_about= link_to(content_tag(:span, 'About Us'), 'http://www.juggernautguild.com/topic/13476-about-us/')
                   %li#nav_joining= link_to(content_tag(:span, 'Joining'), 'http://www.juggernautguild.com/topic/13475-joining/')
-                  %li#nav_roster= link_to(content_tag(:span, 'Roster'), 'http://www.wowarmory.com/guild-info.xml?r=Mal%27Ganis&amp;gn=Juggernaut')
+                  %li#nav_roster= link_to(content_tag(:span, 'Roster'), 'http://us.battle.net/wow/en/guild/malganis/juggernaut/')
                   %li#nav_logs= link_to(content_tag(:span, 'Logs'), 'http://www.worldoflogs.com/guilds/180/')
                   %li#nav_lf.active= link_to(content_tag(:span, 'LF'), root_url)
                   %li#nav_calendar= link_to(content_tag(:span, 'Calendar'), 'http://www.juggernautguild.com/calendar/', :title => 'Go to Calendar')
