Don't show Punishment tab to members if they don't have any

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -37,9 +37,9 @@
       %li.tab_toggle= link_to(content_tag(:span, 'Raids'),        member_raids_path(@member))
       %li.tab_toggle= link_to(content_tag(:span, 'Loots'),        member_loots_path(@member))
       %li.tab_toggle= link_to(content_tag(:span, 'Wishlist'),     member_wishlists_path(@member))
-      %li.tab_toggle= link_to(content_tag(:span, 'Achievements'), member_achievements_path(@member))
-      %li.tab_toggle= link_to(content_tag(:span, 'Punishments'),  member_punishments_path(@member))
       -# %li.tab_toggle= link_to(content_tag(:span, 'Achievements'), member_achievements_path(@member))
+      - if current_user.is_admin? or @member.punishments.size > 0
+        %li.tab_toggle= link_to(content_tag(:span, 'Punishments'),  member_punishments_path(@member))
     #t-raids
     #t-loots
     #t-wishlist
